# jolt

./: .dockerignore  .gitignore  Cargo.toml  LICENSE  README.md  build.zig  build.zig.zon  prd.json  progress.txt  spec_rust.md  types.d.ts
.github/workflows/: build-and-test.yml
examples/basic/: Cargo.toml  Dockerfile  README.md
examples/basic/integration/: package.json  run.sh  test.ts  tsconfig.json
examples/basic/migrations/: 0001_init.sql
examples/basic/public/: app.css
examples/basic/src/: chat.rs  endpoints.rs  main.rs  tasks.rs
examples/basic/templates/: index.hbs
facil.io/: build.zig  build.zig.zon
facil.io/lib/facil/http/: http_internal.h
facil.io/lib/facil/tls/: fio_tls_openssl.c
jolt-core/: Cargo.toml
jolt-core/src/: auth_bearer.rs  auth_jwt.rs  auth_websocket.rs  auth_ws_jwt.rs  body_log.rs  cors.rs  endpoint.rs  endpoint_registry.rs  lib.rs  method.rs  optional.rs  parse_body.rs  parse_query.rs  pubsub.rs  registered_endpoint.rs  request.rs  request_ext.rs  response.rs  router.rs  server.rs  sse.rs  status.rs  task.rs  tests.rs  to_sql.rs  websocket.rs
jolt-core/tests/: auto_middleware_derive.rs  endpoint_integration.rs  inventory_registration.rs  patch_query_derive.rs  ws_auth_upgrade.rs  ws_integration.rs  ws_macro.rs  ws_pubsub_integration.rs
jolt-db/: Cargo.toml
jolt-db/src/: lib.rs  main.rs
jolt-macros/: Cargo.toml
jolt-macros/src/: auto_middleware.rs  endpoint.rs  lib.rs  patch_query.rs  ts_export.rs  ws.rs
jolt-templates/: Cargo.toml
jolt-templates/src/: lib.rs
jolt-utils/: Cargo.toml
jolt-utils/src/: json_types.rs  jwt.rs  lib.rs  mime.rs  password.rs  tests.rs
jolt-utils/src/tests/: jwt.rs  password_uuid.rs
joltr-core/: Cargo.toml
joltr-core/src/: auth_bearer.rs  auth_error.rs  auth_jwt.rs  auth_websocket.rs  auth_ws_jwt.rs  body_log.rs  cookie.rs  cors.rs  endpoint.rs  endpoint_registry.rs  error.rs  file_serve.rs  lib.rs  method.rs  optional.rs  parse_body.rs  parse_query.rs  pubsub.rs  registered_endpoint.rs  request.rs  request_ext.rs  response.rs  router.rs  server.rs  sse.rs  status.rs  tests.rs  to_sql.rs  websocket.rs
joltr-core/tests/: auto_middleware_derive.rs  cookie.rs  endpoint_error.rs  endpoint_integration.rs  error.rs  file_serve.rs  inventory_registration.rs  patch_query_derive.rs  redirect.rs  tls.rs  ws_auth_upgrade.rs  ws_integration.rs  ws_macro.rs  ws_pubsub_integration.rs
joltr-db/: Cargo.toml
joltr-db/src/: lib.rs  main.rs
joltr-macros/: Cargo.toml
joltr-macros/src/: auto_middleware.rs  endpoint.rs  lib.rs  patch_query.rs  ts_export.rs  ws.rs
joltr-templates/: Cargo.toml
joltr-templates/src/: lib.rs
joltr-types/: Cargo.toml
joltr-types/src/: lib.rs  main.rs
joltr-types/tests/: ts_export_integration.rs
joltr-utils/: Cargo.toml
joltr-utils/src/: datetime.rs  email.rs  json_types.rs  jwt.rs  lib.rs  mime.rs  password.rs  tests.rs  uuid.rs
joltr-utils/src/tests/: jwt.rs  password_uuid.rs
src/: db-migrations.zig  main.zig  typegen.zig
src/db/: database.zig
src/endpoints/: example.zig
src/middleware/: auth.zig  auto.zig  cors.zig  log.zig  parse-body.zig  parse-query-params.zig
src/tasks/: example_task.zig
src/utils/: array_utils.zig  camelize.zig  constants.zig  datetime.zig  email.zig  endpoint_utils.zig  error.zig  json.zig  jwt.zig  mime.zig  password.zig  patch.zig  strutils.zig  task.zig  time.zig  type_utils.zig  types.zig  user_presence.zig  uuid.zig
src/zap/: endpoint.zig  fio.zig  http.zig  request.zig  util.zig  websockets.zig  zap.zig
