[package]
name = "jolt-db"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
sqlx = { workspace = true }
tokio = { workspace = true }
# `tokio-stream` re-exports the `futures_core::Stream` trait sqlx's
# `PgListener::into_stream` returns. `JoltDb::listen` (JOLT-RS-091) names
# this trait in its return-position-impl-trait signature, so the trait must
# be importable inside the crate. Pulling it through `tokio-stream` keeps
# us on the same Stream trait family used elsewhere in the workspace
# (jolt-core's tokio-stream dep) rather than adding a fresh `futures-core`
# entry. `StreamExt` (also re-exported) gives the env-gated success-path
# test `.next()` to drive the stream.
tokio-stream = { workspace = true }
sha2 = { workspace = true }
