[package]
name = "jolt-db"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
sqlx = { workspace = true }
tokio = { workspace = true }
# `tokio-stream` re-exports the `futures_core::Stream` trait sqlx's
# `PgListener::into_stream` returns. `JoltDb::listen` (JOLT-RS-091) names
# this trait in its return-position-impl-trait signature, so the trait must
# be importable inside the crate. Pulling it through `tokio-stream` keeps
# us on the same Stream trait family used elsewhere in the workspace
# (jolt-core's tokio-stream dep) rather than adding a fresh `futures-core`
# entry. `StreamExt` (also re-exported) gives the env-gated success-path
# test `.next()` to drive the stream.
tokio-stream = { workspace = true }
sha2 = { workspace = true }
# JOLT-RS-104: the `jolt-db` CLI (`src/main.rs`) needs subcommand parsing
# (`jolt-db migrate new <name>`) and a UTC timestamp for the filename
# (`YYYYMMDDHHMMSS_<name>.sql`). `clap` (feature `derive`) covers the
# subcommand layer; `chrono` matches the rest of the workspace's
# already-pulled `chrono` (with `serde` — unused here but harmless) so we
# stay on a single time crate.
clap = { workspace = true }
chrono = { workspace = true }
