[package]
name = "jolt-utils"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
jsonwebtoken = { workspace = true }
pbkdf2 = { workspace = true }
sha2 = { workspace = true }
rand = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
